src/test/deca/context/invalid/created/decl_float_eq_bool.deca
{
float a = true; //true n'est pas un float
}